--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/GiovanniCardamone/fastify-autoroutes#readme",
   "devDependencies": {
+    "@types/node": "^14.0.27",
     "fastify": "^3.1.1",
     "snazzy": "^8.0.0",
     "standard": "^14.3.4",
