--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "fastify-autoroutes",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "description": "Map directory structure to routes",
     "main": "dist/index.js",
     "scripts": {
-        "lint": "eslint ./src",
+        "lint": "eslint",
         "build": "tsc",
         "watch": "nodemon",
         "clean": "rm -rf dist",
         "test": "npm run lint && tap tests",
-        "coverage": "cross-env VALUE_FROM_ENV=pippo tap --cov --coverage-report=html test",
+        "coverage": "cross-env tap --cov --coverage-report=html tests",
         "deploy": "npm run lint && npm run build && npm run test && npm run coverage && npm publish"
     },
     "repository": {
@@ -28,6 +28,7 @@
     "homepage": "https://github.com/GiovanniCardamone/fastify-autoroutes#readme",
     "devDependencies": {
         "@types/node": "^14.0.27",
+        "cross-env": "^7.0.2",
         "eslint": "^7.6.0",
         "fastify": "^3.1.1",
         "nodemon": "^2.0.4",
