--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -25,4 +25,5 @@
   ],
   "contributorsPerLine": 7,
   "badgeTemplate": "[![All Contributors](https://img.shields.io/badge/all_contributors-<%= contributors.length %>-green.svg?style=flat)](#contributors)",
+  "skipCi": "true"
 }
