updated .npmignore for release 1.0.4

--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,17 @@
-.dependabot
 .github
 .nyc_output
 .vscode
 coverage
 docs
 examples
-tests
 src
 tests
+.all-contributorsrc
 .editorconfig
 .prettierignore
 .prettierrc
 .taprc
+CHANGELOG.md
+CONTRIBUTING.md
 eslint.json
 nodemon.json
