adding coverage shields

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,6 @@ jobs:
 
             - name: Tests
               run: npm test
+
+            - name: Coverage
+              run: CODECOV_TOKEN="${{ secrets.CODECOV_TOKEN }}" npm run coverage
