--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "devDependencies": {
         "@types/node": "^14.0.27",
         "@types/tap": "^14.10.0",
+        "codecov": "^3.7.2",
         "cross-env": "^7.0.2",
         "eslint": "^7.6.0",
         "fastify": "^3.1.1",
