--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "test": "npm run build && npm run tap",
         "test:watch": "nodemon --exec 'npm run tap'",
         "coverage": "tap --coverage-report=text-lcov | codecov -t $CODECOV_TOKEN",
+        "coverage:show": "tap --cov --coverage-report=html tests",
         "deploy": "npm run test && npm publish"
     },
     "repository": {
