adding codecov to master

--- a/.github/workflows/ci-coverage.yml
+++ b/.github/workflows/ci-coverage.yml
@@ -1,7 +1,10 @@
 name: CI Coverage
-on: [push, pull_request]
+on:
+    push:
+        branches:
+            - master
 jobs:
-    test:
+    coverage:
         name: ${{ matrix.node-version }} ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
         strategy:
