added coverage step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,17 @@ jobs:
               run: |
                   npm i -D
 
+            - name: Build
+              run: |
+                  npm run build
+
             - name: Run tests
               run: |
                   npm run test
+
+            - name: Run Coverage
+              run: |
+                  npm run coverage
 
             - name: Coveralls
               uses: coverallsapp/github-action@master
