--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,17 +38,17 @@ jobs:
               run: |
                   npm run coverage
 
-            - name: Coveralls
-              uses: coverallsapp/github-action@master
-              with:
-                  github-token: ${{ secrets.GITHUB_TOKEN }}
-
     coverage:
         needs: test
 
         runs-on: ubuntu-latest
 
         steps:
+            - name: Coveralls Make Coverage Report
+              uses: coverallsapp/github-action@master
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+
             - name: Coveralls Finished
               uses: coverallsapp/github-action@master
               with:
