test coverage actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - name: Display coverage
+              run: |
+                  cat ./coverage/lcov.info
+
             - name: Coveralls Finished
               uses: coverallsapp/github-action@master
               with:
