--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,10 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [10.x, 12.x, 13.x, 14.x]
-                os: [ubuntu-latest, windows-latest, macOS-latest]
+                # node-version: [10.x, 12.x, 13.x, 14.x]
+                # os: [ubuntu-latest, windows-latest, macOS-latest]
+                node-version: [10.x]
+                os: [ubuntu-latest]
 
         steps:
             - uses: actions/checkout@v2
@@ -55,9 +57,9 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Display coverage
+            - name: Display project
               run: |
-                  cat ./coverage/lcov.info
+                  ls
 
             - name: Coveralls Finished
               uses: coverallsapp/github-action@master
