--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "typescript": "^3.9.7"
     },
     "dependencies": {
-        "fastify-plugin": "^2.1.1"
+        "fastify-plugin": "^2.1.1",
+        "type-jsonschema": "0.0.4"
     },
     "contributors": [
         {
