--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "dist/index.js",
     "scripts": {
         "lint": "eslint",
-        "build": "npm run lint && tsc",
-        "build:watch": "nodemon --exec 'npm run build'",
+        "build": "tsc",
+        "build:watch": "tsc --watch",
         "tap": "tap tests",
         "test": "npm run build && npm run tap",
         "test:watch": "nodemon --exec 'npm run tap'",
@@ -34,13 +34,14 @@
     },
     "homepage": "https://github.com/GiovanniCardamone/fastify-autoroutes#readme",
     "devDependencies": {
-        "@types/node": "^14.0.27",
+        "@types/node": "^14.14.6",
         "@types/tap": "^14.10.0",
         "coveralls": "^3.1.0",
         "cross-env": "^7.0.2",
         "docsify": "^4.11.4",
         "eslint": "^7.6.0",
-        "fastify": "^3.1.1",
+        "fastify": "^3.20.1",
+        "glob-promise": "^4.2.0",
         "nodemon": "^2.0.4",
         "tap": "^14.10.8",
         "typescript": "^4.0.2"
