--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
     "version": "2.1.0",
     "description": "Map directory structure to routes",
     "main": "dist/index.js",
+    "prettier": "@giovannicardamone/prettier-config",
+    "eslintConfig": {
+        "extends": "@giovannicardamone/eslint-config"
+    },
     "scripts": {
         "lint": "eslint",
         "build": "tsc",
         "build:watch": "tsc --watch",
         "test": "exit 0; # npm run build && npm run tap",
         "test:watch": "nodemon --exec 'npm run test'",
-        "coverage": "exit 0",
-        "docs:watch": "docsify serve ./docs"
+        "test:coverage": "exit 0",
+        "docs": "docsify generate ./docs",
+        "docs:watch": "docsify serve ./docs",
+        "prepare": "husky install"
     },
     "repository": {
         "type": "git",
@@ -31,6 +37,8 @@
     },
     "homepage": "https://github.com/GiovanniCardamone/fastify-autoroutes#readme",
     "devDependencies": {
+        "@giovannicardamone/eslint-config": "^0.6.0",
+        "@giovannicardamone/prettier-config": "^0.1.3",
         "@types/chai": "^4.2.21",
         "@types/mocha": "^9.0.0",
         "@types/node": "^14.14.6",
@@ -43,22 +51,23 @@
         "docsify": "^4.11.4",
         "eslint": "^7.6.0",
         "fastify": "3.17.0",
-        "glob-promise": "^4.2.0",
-        "mocha": "^8.4.0",
+        "husky": "^7.0.4",
+        "mocha": "^9.2.0",
         "nodemon": "^2.0.4",
-        "tap": "^14.10.8",
+        "tap": "^12.7.0",
         "ts-mocha": "^8.0.0",
         "typescript": "^4.0.2"
     },
     "dependencies": {
         "fastify-plugin": "^3.0.0",
-        "json5": "^2.2.0",
-        "pluralize": "^8.0.0",
-        "yargs": "^13.3.2"
+        "glob-promise": "^4.2.2"
     },
     "peerDependencies": {
         "fastify": "^3.17.0"
     },
+    "files": [
+        "dist"
+    ],
     "contributors": [
         {
             "name": "Giovanni Cardamone",
