--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "lint": "eslint",
         "build": "tsc",
         "build:watch": "tsc --watch",
-        "test": "exit 0; # npm run build && npm run tap",
-        "test:watch": "nodemon --exec 'npm run test'",
-        "test:coverage": "exit 0",
+        "test": "jest",
+        "test:watch": "jest --watchAll",
+        "test:coverage": "jest --collectCoverage",
         "docs": "docsify generate ./docs",
         "docs:watch": "docsify serve ./docs",
         "prepare": "husky install",
@@ -38,28 +38,23 @@
     },
     "homepage": "https://github.com/GiovanniCardamone/fastify-autoroutes#readme",
     "devDependencies": {
+        "@fastify/error": "^3.0.0",
         "@giovannicardamone/eslint-config": "^0.6.0",
         "@giovannicardamone/prettier-config": "^0.1.3",
-        "@types/chai": "^4.2.21",
-        "@types/mocha": "^9.0.0",
+        "@types/jest": "^29.2.0",
+        "@types/mock-fs": "^4.13.1",
         "@types/node": "^14.14.6",
-        "@types/pluralize": "^0.0.29",
-        "@types/tap": "^14.10.0",
-        "@types/yargs": "^17.0.2",
-        "chai": "^4.3.4",
         "coveralls": "^3.1.0",
-        "cross-env": "^7.0.2",
         "docsify": "^4.11.4",
         "eslint": "^7.6.0",
-        "fastify": "4.6.0",
+        "fastify": "^4.9.2",
         "fastify-plugin": "4.2.1",
-        "@fastify/error": "^3.0.0",
         "husky": "^7.0.4",
-        "mocha": "^9.2.0",
-        "nodemon": "^2.0.4",
-        "tap": "^12.7.0",
-        "ts-mocha": "^8.0.0",
-        "typescript": "^4.0.2"
+        "jest": "^29.2.1",
+        "light-my-request": "^5.6.1",
+        "mock-fs": "^5.1.4",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.8.4"
     },
     "dependencies": {
         "fastify-plugin": "^4.0.0",
